--- a/upgrade/cf_v250_v251.md
+++ b/upgrade/cf_v250_v251.md
@@ -63,4 +63,95 @@ Error 100: CPI error 'Bosh::Clouds::CloudError' with message 'Creating VM with a
 Task 75 error
 ```
 
+## Resolution
+- v250 - dieo networks configuration
+```
+- name: diego1
+  subnets:
+  - cloud_properties: {}
+    range: 10.244.16.0/30
+    reserved:
+    - 10.244.16.1
+    static: []
+  - cloud_properties: {}
+    range: 10.244.16.4/30
+    reserved:
+    - 10.244.16.5
+    static: []
+  - cloud_properties: {}
+    range: 10.244.16.8/30
+    reserved:
+    - 10.244.16.9
+    static: []
+  - cloud_properties: {}
+    range: 10.244.16.12/30
+    reserved:
+    - 10.244.16.13
+    static: []
+....
+```
+- v251 - diego networks configuration changed as follows:
+```
+networks:
+- name: diego1
+  subnets:
+  - cloud_properties: {}
+    gateway: 10.244.16.1
+    range: 10.244.16.0/24
+    reserved:
+    - 10.244.16.1
+    static: []
+  type: manual
+- name: diego2
+  subnets:
+  - cloud_properties: {}
+    gateway: 10.244.18.1
+    range: 10.244.18.0/24
+    reserved:
+    - 10.244.18.1
+    static: []
+  type: manual
+- name: diego3
+  subnets:
+  - cloud_properties: {}
+    gateway: 10.244.20.1
+    range: 10.244.20.0/24
+    reserved:
+    - 10.244.20.1
+    static: []
+  type: manual
+```
+- To resolve it, change v250 network configuration to v251 style and redeploy v250
+- Then, deploy v251 
+- diego changed configuration:
+```
+jobs:
+- name: cell_z1
+  properties:
+    diego:
+      route_emitter:
+        local_mode: "<redacted>"   #++
+- name: cell_z2
+  properties:
+    diego:
+      route_emitter:
+        local_mode: "<redacted>"  #++
+- name: cell_z3
+  properties:
+    diego:
+      route_emitter:
+        local_mode: "<redacted>"  #++
+
+properties:
+  diego:
+    bbs:
+      sql:
+        max_open_connections: "<redacted>"  #--
+  loggregator:
+    tls:
+      metron:
+        cert: "<redacted>" #++
+        key: "<redacted>" #++ 
+```
+
 
