--- a/upgrade/cf_v250_v251.md
+++ b/upgrade/cf_v250_v251.md
@@ -1,7 +1,7 @@
 # Upgrade v250 to v251
 
 
-## log
+## Update Error
 ```
 $ bosh releases
 Acting as user 'admin' on 'Bosh Lite Director'
@@ -154,4 +154,36 @@ properties:
         key: "<redacted>" #++ 
 ```
 
+- Final status
+```
+$ bosh releases
+Acting as user 'admin' on 'Bosh Lite Director'
 
++-------------------+----------+-------------+
+| Name              | Versions | Commit Hash |
++-------------------+----------+-------------+
+| cf                | 250      | 7c126228+   |
+|                   | 251*     | 493e5077+   |
+| cflinuxfs2-rootfs | 1.44.0   | 00c09162+   |
+|                   | 1.45.0*  | 6994665d+   |
+| diego             | 1.4.1    | 7479357b    |
+|                   | 1.5.3*   | efeaef80    |
+| etcd              | 89       | 220297bf    |
+| garden-runc       | 1.0.0    | 33181c87    |
+|                   | 1.0.4    | 464a97bf    |
+|                   | 1.1.1*   | f5fbbf1e    |
++-------------------+----------+-------------+
+(*) Currently deployed
+(+) Uncommitted changes
+
+$ bosh stemcells
+Acting as user 'admin' on 'Bosh Lite Director'
+
++---------------------------------------------+---------------+----------+--------------------------------------+
+| Name                                        | OS            | Version  | CID                                  |
++---------------------------------------------+---------------+----------+--------------------------------------+
+| bosh-warden-boshlite-ubuntu-trusty-go_agent | ubuntu-trusty | 3312.12  | 58dd63f8-ef55-4354-668b-5f7836d0a9f5 |
+| bosh-warden-boshlite-ubuntu-trusty-go_agent | ubuntu-trusty | 3312.15* | 332ec519-808c-45f9-4d04-85c2931514e5 |
++---------------------------------------------+---------------+----------+--------------------------------------+
+
+```
