--- a/upgrade/cf_v238_v250.md
+++ b/upgrade/cf_v238_v250.md
@@ -82,4 +82,49 @@ Acting as user 'admin' on 'Bosh Lite Director'
 
 - Final: cf-v250
 ```
+ubuntu@ip-172-31-62-73:~$ bosh releases
+Acting as user 'admin' on 'Bosh Lite Director'
+
++-------------------+----------+-------------+
+| Name              | Versions | Commit Hash |
++-------------------+----------+-------------+
+| cf                | 238      | 67fa6abf+   |
+|                   | 250*     | 7c126228+   |
+| cflinuxfs2-rootfs | 1.16.0   | fa43f35a+   |
+|                   | 1.44.0*  | 00c09162+   |
+| diego             | 0.1476.0 | 23caa9d3    |
+|                   | 1.4.1*   | 7479357b    |
+| etcd              | 57       | 6e66cc6a    |
+|                   | 89       | 220297bf    |
+| garden-linux      | 0.338.0  | 38e53b4a    |
+|                   | 0.342.0  | b03a9abc    |
+| garden-runc       | 1.0.4*   | 464a97bf    |
++-------------------+----------+-------------+
+(*) Currently deployed
+(+) Uncommitted changes
+
+ubuntu@ip-172-31-62-73:~$ bosh deployments
+Acting as user 'admin' on 'Bosh Lite Director'
+
++-----------------+--------------------------+-----------------------------------------------------+--------------+
+| Name            | Release(s)               | Stemcell(s)                                         | Cloud Config |
++-----------------+--------------------------+-----------------------------------------------------+--------------+
+| cf-warden       | cf/250                   | bosh-warden-boshlite-ubuntu-trusty-go_agent/3312.12 | none         |
++-----------------+--------------------------+-----------------------------------------------------+--------------+
+| cf-warden-diego | cf/250                   | bosh-warden-boshlite-ubuntu-trusty-go_agent/3312.12 | none         |
+|                 | cflinuxfs2-rootfs/1.44.0 |                                                     |              |
+|                 | diego/1.4.1              |                                                     |              |
+|                 | garden-runc/1.0.4        |                                                     |              |
++-----------------+--------------------------+-----------------------------------------------------+--------------+
+
+ubuntu@ip-172-31-62-73:~$ bosh stemcells
+Acting as user 'admin' on 'Bosh Lite Director'
+
++---------------------------------------------+---------------+----------+--------------------------------------+
+| Name                                        | OS            | Version  | CID                                  |
++---------------------------------------------+---------------+----------+--------------------------------------+
+| bosh-warden-boshlite-ubuntu-trusty-go_agent | ubuntu-trusty | 3147     | 0cc16469-f78f-421d-68c4-e21cf42c8ac7 |
+| bosh-warden-boshlite-ubuntu-trusty-go_agent | ubuntu-trusty | 3312.12* | 2924b165-1bcd-4c68-6238-3d7fcda5b4a7 |
++---------------------------------------------+---------------+----------+--------------------------------------+
+
 ```
