--- a/upgrade/cf_v238_v250.md
+++ b/upgrade/cf_v238_v250.md
@@ -80,7 +80,7 @@ Acting as user 'admin' on 'Bosh Lite Director'
 +-----------------+--------------------------+-----------------------------------------------------+--------------+
 ```
 
-- Final: cf-v250
+## Final: cf-v250
 ```
 ubuntu@ip-172-31-62-73:~$ bosh releases
 Acting as user 'admin' on 'Bosh Lite Director'
@@ -127,4 +127,60 @@ Acting as user 'admin' on 'Bosh Lite Director'
 | bosh-warden-boshlite-ubuntu-trusty-go_agent | ubuntu-trusty | 3312.12* | 2924b165-1bcd-4c68-6238-3d7fcda5b4a7 |
 +---------------------------------------------+---------------+----------+--------------------------------------+
 
+ubuntu@ip-172-31-62-73:~/bin⟫ bosh vms
+Acting as user 'admin' on 'Bosh Lite Director'
+Deployment 'cf-warden'
+
+Director task 86
+
+Task 86 done
+
++---------------------------------------------------------------------------+---------+-----+-----------+--------------+
+| VM                                                                        | State   | AZ  | VM Type   | IPs          |
++---------------------------------------------------------------------------+---------+-----+-----------+--------------+
+| api_z1/0 (813a759a-30d7-412c-8fc7-21593c667625)                           | running | n/a | large_z1  | 10.244.0.138 |
+| blobstore_z1/0 (68d5b99a-a1d2-40a5-bbb7-2e77c6825aa8)                     | running | n/a | medium_z1 | 10.244.0.130 |
+| consul_z1/0 (df204230-2bad-4494-9cec-522b9f88c828)                        | running | n/a | small_z1  | 10.244.0.54  |
+| doppler_z1/0 (ea7c5b85-6382-4c14-a03e-63bee07639e7)                       | running | n/a | medium_z1 | 10.244.0.146 |
+| etcd_z1/0 (40f0243d-ec16-4fa1-ac9c-afa277cd6c3e)                          | running | n/a | large_z1  | 10.244.0.42  |
+| ha_proxy_z1/0 (511ac4b6-4159-4f20-a2a0-1f7969abad90)                      | running | n/a | router_z1 | 10.244.0.34  |
+| hm9000_z1/0 (0c7c34a0-3774-45ab-925e-7632d6e4f385)                        | running | n/a | medium_z1 | 10.244.0.142 |
+| loggregator_trafficcontroller_z1/0 (b7375fbc-32db-41b4-887e-6d4b6bb21ead) | running | n/a | small_z1  | 10.244.0.150 |
+| nats_z1/0 (56326ad9-5440-4716-b8eb-613f8b3dd588)                          | running | n/a | medium_z1 | 10.244.0.6   |
+| postgres_z1/0 (88f768fb-363c-4dd0-9762-9566647547fc)                      | running | n/a | medium_z1 | 10.244.0.30  |
+| router_z1/0 (70a6b5e0-2e70-4c58-9e8e-33bd30267278)                        | running | n/a | router_z1 | 10.244.0.22  |
+| runner_z1/0 (4183c066-29a5-4c3f-ab38-8d1c1db619ae)                        | running | n/a | runner_z1 | 10.244.0.26  |
+| uaa_z1/0 (056811d4-a15f-45c1-9f77-326e467061e7)                           | running | n/a | medium_z1 | 10.244.0.134 |
++---------------------------------------------------------------------------+---------+-----+-----------+--------------+
+
+VMs total: 13
+Deployment 'cf-warden-diego'
+
+Director task 87
+
+Task 87 done
+
++-----------------------------------------------------------+---------+-----+------------------+--------------+
+| VM                                                        | State   | AZ  | VM Type          | IPs          |
++-----------------------------------------------------------+---------+-----+------------------+--------------+
+| access_z1/0 (f0448821-9c87-43ee-bd69-75c6e1f9baa2)        | running | n/a | access_z1        | 10.244.16.22 |
+| brain_z1/0 (9fb6980c-8cc3-4cbd-98ed-e4b40c456fe2)         | running | n/a | brain_z1         | 10.244.16.6  |
+| cc_bridge_z1/0 (0021ddc8-90d7-414b-8248-7050af70a64d)     | running | n/a | cc_bridge_z1     | 10.244.16.14 |
+| cell_z1/0 (0529c55f-c8fd-46d3-8572-360e27641ec1)          | running | n/a | cell_z1          | 10.244.16.10 |
+| database_z1/0 (b79f5c76-188c-48de-a8c0-4d349c641859)      | running | n/a | database_z1      | 10.244.16.2  |
+| route_emitter_z1/0 (bce728cb-f4d8-40db-87cd-f3ac0e0b12f5) | running | n/a | route_emitter_z1 | 10.244.16.18 |
++-----------------------------------------------------------+---------+-----+------------------+--------------+
+
+VMs total: 6
+```
+
+## App error
+```
+130 ubuntu@ip-172-31-62-73:~/bin⟫ cf apps
+Getting apps in org org / space space as admin...
+OK
+
+name       requested state   instances   memory   disk   urls
+docker     started           0/1         256M     1G     docker.bosh-lite.com
+test-php   started           0/1         256M     1G     test-php.bosh-lite.com
 ```
